--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             border-radius: var(--radius-pill);
             font-family: 'Nunito', sans-serif;
             font-weight: 700;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
         }
 
         /* Lists */
@@ -312,6 +312,7 @@
 
         @media (max-width: 768px) {
             .hero h1 { font-size: 2.4rem; }
+            .hero-badges { justify-content: center; }
             section { padding: 60px 0; }
         }
     </style>
@@ -328,7 +329,7 @@
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#home">
-                <img src="logo.png" alt="School Logo" height="50" class="me-2">
+                <img src="logo.png" alt="School Logo" height="50" class="me-2 rounded">
                 <span>Evergreen International School</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -403,7 +404,7 @@
     </section>
 
     <section id="academics">
-        <div class="container">
+        <div class="container text-center">
             <div class="section-title" data-aos="fade-up">
                 <h2>Academics</h2>
                 <p class="text-muted">Curriculum focused on foundational literacy and NEP 2020 alignment.</p>
@@ -412,22 +413,22 @@
                 <div class="col-lg-6" data-aos="fade-up">
                     <div class="content-card">
                         <h5 class="fw-bold mb-3">Teaching Methodology</h5>
-                        <ul class="list-check">
+                        <ul class="list-check text-start">
                             <li><i class="fas fa-check-circle"></i>Activity-based learning techniques.</li>
                             <li><i class="fas fa-check-circle"></i>Visual and audio teaching aids for better retention.</li>
                             <li><i class="fas fa-check-circle"></i>Interactive classroom practices.</li>
-                            <li><i class="fas fa-check-circle"></i>Continuous assessment and student observation.</li>
+                            <li><i class="fas fa-check-circle"></i>Continuous assessment and observation.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="content-card">
                         <h5 class="fw-bold mb-3">Primary Classes (Grades 1-5)</h5>
-                        <ul class="list-check">
+                        <ul class="list-check text-start">
                             <li><i class="fas fa-check-circle"></i>English, Mathematics, Environmental Studies / Science.</li>
                             <li><i class="fas fa-check-circle"></i>Social Studies, General Knowledge.</li>
                             <li><i class="fas fa-check-circle"></i>Computer Education, Art and Craft.</li>
-                            <li><i class="fas fa-check-circle"></i>Physical Education and Wellness.</li>
+                            <li><i class="fas fa-check-circle"></i>Physical Education.</li>
                         </ul>
                     </div>
                 </div>
@@ -436,14 +437,14 @@
     </section>
 
     <section id="admissions" class="highlight-section">
-        <div class="container">
+        <div class="container text-center">
             <div class="section-title" data-aos="fade-up">
                 <h2>Admissions</h2>
-                <p class="text-muted">Admissions are open for Pre-KG to Grade 5 based on seat availability.</p>
+                <p>Admissions are open for Pre-KG to Grade 5 based on seat availability and age eligibility.</p>
             </div>
             <div class="row g-4">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <div class="content-card">
+                    <div class="content-card text-start">
                         <h5 class="fw-bold mb-3">Admission Process</h5>
                         <ul class="list-check">
                             <li><i class="fas fa-check-circle"></i>Enquiry and interaction with school authorities.</li>
@@ -454,7 +455,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
-                    <div class="content-card">
+                    <div class="content-card text-start">
                         <h5 class="fw-bold mb-3">Documents Required</h5>
                         <ul class="list-check">
                             <li><i class="fas fa-check-circle"></i>Birth Certificate (Original & Copy).</li>
@@ -472,7 +473,7 @@
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <h2>Infrastructure</h2>
-                <p class="text-muted">A safe, hygienic, and child-friendly campus with essential facilities.</p>
+                <p>A safe, hygienic, and child-friendly campus with essential facilities.</p>
             </div>
             <div class="row g-4">
                 <div class="col-md-6" data-aos="fade-up">
@@ -481,7 +482,7 @@
                         <ul class="list-check">
                             <li><i class="fas fa-check-circle"></i>Spacious and ventilated classrooms.</li>
                             <li><i class="fas fa-check-circle"></i>Library with age-appropriate books.</li>
-                            <li><i class="fas fa-check-circle"></i>Outdoor play area for physical activities.</li>
+                            <li><i class="fas fa-check-circle"></i>Outdoor play area.</li>
                             <li><i class="fas fa-check-circle"></i>Smart classroom support.</li>
                         </ul>
                     </div>
@@ -492,7 +493,7 @@
                         <ul class="list-check">
                             <li><i class="fas fa-check-circle"></i>Regular medical check-ups.</li>
                             <li><i class="fas fa-check-circle"></i>Child-safe campus environment.</li>
-                            <li><i class="fas fa-check-circle"></i>Clean drinking water & sanitation facilities.</li>
+                            <li><i class="fas fa-check-circle"></i>Clean drinking water & sanitation.</li>
                         </ul>
                     </div>
                 </div>
@@ -540,7 +541,6 @@
                     <div class="content-card">
                         <h5 class="fw-bold mb-3">Principal’s Message</h5>
                         <p class="text-muted">"At Evergreen International School, we understand that the early years of a child’s education are the most important. These years shape not only academic ability, but also confidence, curiosity, and character."</p>
-                        <p class="text-muted">"Our school follows the CBSE-aligned curriculum with a strong focus on foundational learning, conceptual understanding, and age-appropriate teaching practices. We believe that children learn best in an environment that is safe, caring, and encouraging. Therefore, we give equal importance to academics, physical activity, values, and emotional well-being."</p>
                         <p class="text-muted">"Our teachers are committed to guiding each child with patience and dedication, while working closely with parents to support every learner’s individual growth. We aim to create a joyful learning experience that prepares children for future academic stages with confidence."</p>
                     </div>
                 </div>
@@ -548,7 +548,6 @@
                     <div class="content-card">
                         <h5 class="fw-bold mb-3">Correspondent’s Message</h5>
                         <p class="text-muted">"Evergreen International School was established with a simple and sincere purpose: to provide young children with a strong, caring, and meaningful start to their educational journey."</p>
-                        <p class="text-muted">"We believe that education at the primary level should focus on understanding, values, and overall development rather than pressure or competition. Our school follows the CBSE framework and adopts teaching practices that respect each child’s pace of learning, curiosity, and individuality."</p>
                         <p class="text-muted">"Our commitment is to continuously improve our educational practices and facilities, ensuring that every child at Evergreen International School feels safe, valued, and encouraged to grow."</p>
                         <p class="fw-bold text-success mt-3">- Mr. Raja A P, Correspondent</p>
                     </div>
@@ -564,11 +563,11 @@
                 <div class="col-lg-5" data-aos="fade-right">
                     <div class="content-card h-100">
                         <h4 class="fw-bold mb-4">Get in Touch</h4>
-                        <div class="d-flex mb-3"><i class="fas fa-map-marker-alt text-success me-3 mt-1"></i><p class="mb-0">Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal(DT), Erode - 638008.</p></div>
-                        <div class="d-flex mb-3"><i class="fas fa-phone-alt text-success me-3 mt-1"></i><p class="mb-0">+91 98427 12666</p></div>
-                        <div class="d-flex mb-4"><i class="fas fa-envelope text-success me-3 mt-1"></i><p class="mb-0">support@evergreen-school.in</p></div>
+                        <p><i class="fas fa-map-marker-alt text-success me-2"></i> Near Water Tank, Vediyarasampalayam Road, Therkkupalayam, Pallipalayam, Namakkal(DT), Erode - 638008.</p>
+                        <p><i class="fas fa-phone-alt text-success me-2"></i> +91 98427 12666</p>
+                        <p><i class="fas fa-envelope text-success me-2"></i> support@evergreen-school.in</p>
                         <div class="rounded overflow-hidden mt-4 shadow-sm" style="height: 250px;">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.726249629854!2d77.76632427452445!3d11.35471624825964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba968ce12573215%3A0x7d87922d3e137b0!2sEvergreen%20International%20School!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://maps.google.com/maps?q=Evergreen+International+School+Pallipalayam+Erode&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
